--- a/mapper/build.gradle
+++ b/mapper/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
