--- a/mapper/build.gradle
+++ b/mapper/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'net.mikera:vectorz:0.64.0'
 }
