--- a/mapper/build.gradle
+++ b/mapper/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:design:24.1.1'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'net.mikera:vectorz:0.64.0'
+    compile 'com.jakewharton.timber:timber:4.3.1'
 }
