Added API update method

--- a/mapper/build.gradle
+++ b/mapper/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'net.mikera:vectorz:0.64.0'
     compile 'com.orhanobut:logger:1.15'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
